fixed the rating overlapping issue on close button

--- a/src/components/VehicleDetailCard.scss
+++ b/src/components/VehicleDetailCard.scss
@@ -54,6 +54,10 @@
     padding-right: 0;
   }
 
+  .rating {
+    display: inline-block;
+  }
+
   .desktop-only {
     display: none;
     @media (min-width: 576px) {
