--- a/src/components/VehicleDetailsModal.scss
+++ b/src/components/VehicleDetailsModal.scss
@@ -10,6 +10,7 @@
 
   .modal-close {
     text-align: right;
+    z-index: 1;
     position: absolute;
     img {
       width: 35px;
